--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'demo.mp4',\n",
-       " 'Hash': 'Qmf6aMDqz7hkGuxsfRhKnpw6R8M8jen44ZgqVfrdS9uhaA',\n",
-       " 'Size': '635733'}"
+       "{'Name': 'tranh.jpeg',\n",
+       " 'Hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh',\n",
+       " 'Size': '224539'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./demo.mp4','rb')}\n",
+    "files = {'file': open('./tranh.jpeg','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
