--- a/100API.ipynb
+++ b/100API.ipynb
@@ -842,12 +842,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh'}\n",
+      "{'Hash': 'QmYRr9DRMqQ497oBGfytiEGp3QPcdLiukq5SmwDf2JsnVh', 'Name': 'file', 'Size': '36629'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV029_2\n",
+    "url = 'https://100api.orai.dev/cv029_2'\n",
+    "data = {'input_source_hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CV029_2\n",
-    "url = 'https://100api.orai.dev/cv029_2'\n",
+    "#CV029_3\n",
+    "url = 'https://100api.orai.dev/cv029_3'\n",
     "data = {'input_source_hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
