--- a/100API.ipynb
+++ b/100API.ipynb
@@ -920,6 +920,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmezFG2Coe5d86Cd1UPdtwaqhjr1Mox6XrMNN9ATynJoge'}\n",
+      "{'Hash': 'QmcEc3KVCay5yTosZyVSsyCNiBqLh3o4gSLFscWwkGrx2m', 'Name': 'file', 'Size': '14940'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV030_1\n",
+    "url = 'https://100api.orai.dev/cv030_1'\n",
+    "data = {'input_source_hash': 'QmezFG2Coe5d86Cd1UPdtwaqhjr1Mox6XrMNN9ATynJoge'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
