--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'sm.jpeg',\n",
-       " 'Hash': 'QmezFG2Coe5d86Cd1UPdtwaqhjr1Mox6XrMNN9ATynJoge',\n",
-       " 'Size': '592574'}"
+       "{'Name': 'f.jpeg',\n",
+       " 'Hash': 'QmPFpuSuUVGcMdVMWHwmT5qc7GmvXrsYqYDWuhgV2cfL8H',\n",
+       " 'Size': '298397'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./sm.jpeg','rb')}\n",
+    "files = {'file': open('./f.jpeg','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
