--- a/100API.ipynb
+++ b/100API.ipynb
@@ -998,12 +998,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+      "{'data': [{'emotion': 'happy', 'position': [321, 284, 751, 714]}], 'status': 'success'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV032\n",
+    "url = 'https://100api.orai.dev/cv032'\n",
+    "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CV032\n",
-    "url = 'https://100api.orai.dev/cv032'\n",
+    "#CV036\n",
+    "url = 'https://100api.orai.dev/cv036'\n",
     "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
