--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1024,9 +1024,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmNZKFu2fDTQKSG5JSXeTBe5vr7LoBP6CSd24HjyWozV2J'}\n",
+      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV036\n",
     "url = 'https://100api.orai.dev/cv036'\n",
@@ -1038,6 +1047,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
