--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1050,12 +1050,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'Qmcde1aK8YdhoW7TvKfLg1Z4qWSvt6NYwc4W9XV1FMwmpC'}\n",
+      "{'data': {'bounding_box': [{'max_x': 494, 'max_y': 45, 'min_x': 428, 'min_y': 17}, {'max_x': 397, 'max_y': 83, 'min_x': 267, 'min_y': 41}, {'max_x': 257, 'max_y': 99, 'min_x': 103, 'min_y': 65}, {'max_x': 505, 'max_y': 139, 'min_x': 400, 'min_y': 118}, {'max_x': 402, 'max_y': 151, 'min_x': 299, 'min_y': 127}, {'max_x': 291, 'max_y': 161, 'min_x': 144, 'min_y': 144}, {'max_x': 145, 'max_y': 174, 'min_x': 93, 'min_y': 148}, {'max_x': 584, 'max_y': 310, 'min_x': 568, 'min_y': 298}, {'max_x': 519, 'max_y': 362, 'min_x': 447, 'min_y': 340}, {'max_x': 398, 'max_y': 421, 'min_x': 246, 'min_y': 359}, {'max_x': 512, 'max_y': 387, 'min_x': 447, 'min_y': 362}, {'max_x': 226, 'max_y': 425, 'min_x': 46, 'min_y': 369}, {'max_x': 598, 'max_y': 636, 'min_x': 586, 'min_y': 624}]}, 'status': 'success'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV037\n",
+    "url = 'https://100api.orai.dev/cv037'\n",
+    "data = {'input_source_hash': 'Qmcde1aK8YdhoW7TvKfLg1Z4qWSvt6NYwc4W9XV1FMwmpC'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CV037\n",
-    "url = 'https://100api.orai.dev/cv037'\n",
+    "#CV040\n",
+    "url = 'https://100api.orai.dev/cv040'\n",
     "data = {'input_source_hash': 'Qmcde1aK8YdhoW7TvKfLg1Z4qWSvt6NYwc4W9XV1FMwmpC'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
