--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'hand.jpeg',\n",
-       " 'Hash': 'QmNZKFu2fDTQKSG5JSXeTBe5vr7LoBP6CSd24HjyWozV2J',\n",
-       " 'Size': '15074'}"
+       "{'Name': 'cn.jpeg',\n",
+       " 'Hash': 'QmQHveDntnJquqDeKiSwRAbjDg1DiosQiqp7y6tAvmpL1b',\n",
+       " 'Size': '149985'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./hand.jpeg','rb')}\n",
+    "files = {'file': open('./cn.jpeg','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
