--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1120,12 +1120,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmT28r31q3nZgL1AzoPRVnC8sXoEiWmjF9L7GNTfjSKsRF'}\n",
+      "{'data': [{'label': 'table', 'max_x': 699, 'max_y': 321, 'min_x': 139, 'min_y': 8}], 'status': 'success'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV043\n",
+    "url = 'https://100api.orai.dev/cv043'\n",
+    "data = {'input_source_hash': 'QmT28r31q3nZgL1AzoPRVnC8sXoEiWmjF9L7GNTfjSKsRF'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CV043\n",
-    "url = 'https://100api.orai.dev/cv043'\n",
+    "#CV044\n",
+    "url = 'https://100api.orai.dev/cv044'\n",
     "data = {'input_source_hash': 'QmT28r31q3nZgL1AzoPRVnC8sXoEiWmjF9L7GNTfjSKsRF'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
