--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1146,12 +1146,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmTbwLaFyNHxLGjb1LMf6Y9kAYR96JPve69svZcQZJUCzZ'}\n",
+      "{'data': [], 'status': 'success'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV044\n",
+    "url = 'https://100api.orai.dev/cv044'\n",
+    "data = {'input_source_hash': 'QmTbwLaFyNHxLGjb1LMf6Y9kAYR96JPve69svZcQZJUCzZ'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CV044\n",
-    "url = 'https://100api.orai.dev/cv044'\n",
+    "#CV047\n",
+    "url = 'https://100api.orai.dev/cv047'\n",
     "data = {'input_source_hash': 'QmTbwLaFyNHxLGjb1LMf6Y9kAYR96JPve69svZcQZJUCzZ'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
