--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1172,9 +1172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmTbwLaFyNHxLGjb1LMf6Y9kAYR96JPve69svZcQZJUCzZ'}\n",
+      "{'Hash': 'QmPocupXAExsCVENXPhjFKwjZ4aNTjQJSCNL3kmYFS1VG6', 'Name': 'file', 'Size': '95539'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV047\n",
     "url = 'https://100api.orai.dev/cv047'\n",
@@ -1186,6 +1195,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
