--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1198,9 +1198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmTbwLaFyNHxLGjb1LMf6Y9kAYR96JPve69svZcQZJUCzZ'}\n",
+      "{'data': 5.250391483306885, 'status': 'success'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV049\n",
     "url = 'https://100api.orai.dev/cv049'\n",
@@ -1212,6 +1221,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
