--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1224,9 +1224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmPocupXAExsCVENXPhjFKwjZ4aNTjQJSCNL3kmYFS1VG6'}\n",
+      "{'data': \"[Errno 2] No such file or directory: 'cv051(input_source)'\", 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV051\n",
     "url = 'https://100api.orai.dev/cv051'\n",
@@ -1238,6 +1247,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
