--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1250,9 +1250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmYm52ECijcYCEPfHaD51zhSTH3QgAHUJBXYa1ghbaJJU8'}\n",
+      "{'Hash': 'QmPtVvovwcSszs8Te9ZpWrVhtN2yHCJ5QYHdVBGZNpmxLE', 'Name': 'file', 'Size': '26379'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV052\n",
     "url = 'https://100api.orai.dev/cv052'\n",
@@ -1264,6 +1273,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
