--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1302,6 +1302,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmWGzoZqXTMZuE17ZGh5eoNuh87J9eXq5YoTF47A52UUUv'}\n",
+      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV056\n",
+    "url = 'https://100api.orai.dev/cv053'\n",
+    "data = {'input_source_hash': 'QmWGzoZqXTMZuE17ZGh5eoNuh87J9eXq5YoTF47A52UUUv'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1316,6 +1342,72 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CV057\n",
+    "url = 'https://100api.orai.dev/cv057'\n",
+    "data = {'input_source_hash': 'QmWGzoZqXTMZuE17ZGh5eoNuh87J9eXq5YoTF47A52UUUv'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
