--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1328,9 +1328,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmSau37UqGpi5kwTrBHvxVzvwdxGSGPdgvfiatzmx7wBCZ'}\n",
+      "{'Hash': 'QmZut1ddzstq21g3YGRSJKvewmk9kD8rf4RWSVSMokKoNj', 'Name': 'file', 'Size': '289650'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV057\n",
     "url = 'https://100api.orai.dev/cv057'\n",
@@ -1348,7 +1357,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#CV060\n",
+    "url = 'https://100api.orai.dev/cv060'\n",
+    "data = {'input_source_hash': 'QmSau37UqGpi5kwTrBHvxVzvwdxGSGPdgvfiatzmx7wBCZ'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   },
   {
    "cell_type": "code",
