--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1354,9 +1354,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98'}\n",
+      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV060\n",
     "url = 'https://100api.orai.dev/cv060'\n",
