--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'cn.jpeg',\n",
-       " 'Hash': 'QmQHveDntnJquqDeKiSwRAbjDg1DiosQiqp7y6tAvmpL1b',\n",
-       " 'Size': '149985'}"
+       "{'Name': 'cz.jpeg',\n",
+       " 'Hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98',\n",
+       " 'Size': '935394'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./cn.jpeg','rb')}\n",
+    "files = {'file': open('./cz.jpeg','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
