--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1450,9 +1450,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98'}\n",
+      "{'Hash': 'QmPW2zydgmeHsJmDeXjy1i9tcyFma5M2SWKqBqrnrHeS9o', 'Name': 'file', 'Size': '198940'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV063\n",
     "url = 'https://100api.orai.dev/cv063'\n",
