--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1565,12 +1565,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#CV065_2\n",
     "url = 'https://100api.orai.dev/cv065_2'\n",
+    "data = {'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98',\n",
+    "        'input_style_hash': 'QmPW2zydgmeHsJmDeXjy1i9tcyFma5M2SWKqBqrnrHeS9o'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CV065_3\n",
+    "url = 'https://100api.orai.dev/cv065_3'\n",
     "data = {'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98',\n",
     "        'input_style_hash': 'QmPW2zydgmeHsJmDeXjy1i9tcyFma5M2SWKqBqrnrHeS9o'}\n",
     "headers = {\n",
