--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1567,10 +1567,46 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98', 'input_style_hash': 'QmPW2zydgmeHsJmDeXjy1i9tcyFma5M2SWKqBqrnrHeS9o'}\n",
+      "{'data': 'empty range for randrange() (0, 0, 0)', 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV065_2\n",
     "url = 'https://100api.orai.dev/cv065_2'\n",
+    "data = {'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98',\n",
+    "        'input_style_hash': 'QmPW2zydgmeHsJmDeXjy1i9tcyFma5M2SWKqBqrnrHeS9o'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98', 'input_style_hash': 'QmPW2zydgmeHsJmDeXjy1i9tcyFma5M2SWKqBqrnrHeS9o'}\n",
+      "{'data': 'empty range for randrange() (0, 0, 0)', 'status': 'error'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV065_3\n",
+    "url = 'https://100api.orai.dev/cv065_3'\n",
     "data = {'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98',\n",
     "        'input_style_hash': 'QmPW2zydgmeHsJmDeXjy1i9tcyFma5M2SWKqBqrnrHeS9o'}\n",
     "headers = {\n",
@@ -1587,8 +1623,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CV065_3\n",
-    "url = 'https://100api.orai.dev/cv065_3'\n",
+    "#CV066\n",
+    "url = 'https://100api.orai.dev/cv066'\n",
     "data = {'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98',\n",
     "        'input_style_hash': 'QmPW2zydgmeHsJmDeXjy1i9tcyFma5M2SWKqBqrnrHeS9o'}\n",
     "headers = {\n",
