--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1625,8 +1625,7 @@
    "source": [
     "#CV066\n",
     "url = 'https://100api.orai.dev/cv066'\n",
-    "data = {'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98',\n",
-    "        'input_style_hash': 'QmPW2zydgmeHsJmDeXjy1i9tcyFma5M2SWKqBqrnrHeS9o'}\n",
+    "data = {'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
