--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1619,9 +1619,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98'}\n",
+      "{'Hash': 'QmVbUuX2FXirJdKVtgRUdktThHx46dGnxy9f82yUdQ9qVg', 'Name': 'file', 'Size': '140626'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV066\n",
     "url = 'https://100api.orai.dev/cv066'\n",
@@ -1633,6 +1642,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
