--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1652,7 +1652,7 @@
     "#CV066\n",
     "url = 'https://100api.orai.dev/cv067'\n",
     "data = {'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98',\n",
-    "        'input_background_hash': ''}\n",
+    "        'input_background_hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
