--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1645,9 +1645,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98', 'input_background_hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh'}\n",
+      "{'Hash': 'QmfU5AFZF1agQXoHGGHNS3o8Dz4dTnNYrF6vkkxfArdQZe', 'Name': 'file', 'Size': '8927'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV066\n",
     "url = 'https://100api.orai.dev/cv067'\n",
@@ -1660,6 +1669,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
