--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1678,8 +1678,10 @@
    "source": [
     "#CV068\n",
     "url = 'https://100api.orai.dev/cv068'\n",
-    "data = {'input_source_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98',\n",
-    "        'input_background_hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh'}\n",
+    "data = {'input_source_1_hash': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98',\n",
+    "        'input_source_2_hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh',\n",
+    "        'input_source_3_hash': 'QmSDyJG6YfpTWtto1thQDF66vJrZ4CpgBBWavLyjjpP9Zu',\n",
+    "        'input_source_4_hash': ''}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
