--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1682,6 +1682,23 @@
     "        'input_source_2_hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh',\n",
     "        'input_source_3_hash': 'QmSDyJG6YfpTWtto1thQDF66vJrZ4CpgBBWavLyjjpP9Zu',\n",
     "        'input_source_4_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CV066\n",
+    "url = 'https://100api.orai.dev/cv066'\n",
+    "data = {'raw_output': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
