--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1698,7 +1698,7 @@
    "source": [
     "#CV066\n",
     "url = 'https://100api.orai.dev/cv066'\n",
-    "data = {'raw_output': 'QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98'}\n",
+    "data = {'raw_output': 0}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
