--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1766,7 +1766,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#CV069\n",
+    "url = 'https://100api.orai.dev/cv069'\n",
+    "data = {'raw_output': 0}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
