--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1769,7 +1769,7 @@
    "source": [
     "#CV070\n",
     "url = 'https://100api.orai.dev/cv070'\n",
-    "data = {'raw_output': 0}\n",
+    "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
